Fix: removed darkmode function Fix: slightly darken diff color for visibility

--- a/src/VerseValidator.css
+++ b/src/VerseValidator.css
@@ -88,7 +88,7 @@
   }
 
   :root {
-    --background-color-removed: #fff8b7;
+    --background-color-removed: #f1ebb3;
     --background-color-added: #ffd7b6;
   }
 }
